knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/Qualifying_Scorecard__c.object-meta.xml
<CustomObject>
    <label>Qualifying Scorecard</label>
    <nameField>
        <displayFormat>QSC-{0000}</displayFormat>
        <label>Qualifying Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualifying Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>