knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Qualifying Scorecards</relationshipLabel>
    <relationshipName>Qualifying_Scorecards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>