knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Competing_hospitals_within_20_miles__c.field-meta.xml
<CustomField>
    <fullName>Competing_hospitals_within_20_miles__c</fullName>
    <description>Competing hospitals within 20 miles</description>
    <inlineHelpText>+ 1 point</inlineHelpText>
    <label>Competing hospitals within 20 miles</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>