knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Designated_Trauma_Center__c.field-meta.xml
<CustomField>
    <fullName>Designated_Trauma_Center__c</fullName>
    <description>Designated Trauma Center</description>
    <inlineHelpText>+ 2 points</inlineHelpText>
    <label>Designated Trauma Center</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>