knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/DHCID__c.field-meta.xml
<CustomField>
    <fullName>DHCID__c</fullName>
    <formula>Account__r.texcellency__DefHC_HospitalID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Definitive ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>