knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Existing_System_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Existing_System_Relationship__c</fullName>
    <description>Existing System Relationship</description>
    <inlineHelpText>+ 1 or - 1 point</inlineHelpText>
    <label>Existing System Relationship</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>