knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Existing_training_or_residency_program__c.field-meta.xml
<CustomField>
    <fullName>Existing_training_or_residency_program__c</fullName>
    <description>Existing training or residency program EM, IM or FP within 1 hour</description>
    <inlineHelpText>+ 1 point</inlineHelpText>
    <label>Existing training or residency program</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>