knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Facility_has_main_Medical_Staff__c.field-meta.xml
<CustomField>
    <fullName>Facility_has_main_Medical_Staff__c</fullName>
    <description>Facility has the main Medical Staff specialties: general surgery, radiology, cardiology, obstetrics, and orthopedic</description>
    <inlineHelpText>+ 3 points</inlineHelpText>
    <label>Facility has main Medical Staff</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>