knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Has_volume_declined_over_the_past_3_year__c.field-meta.xml
<CustomField>
    <fullName>Has_volume_declined_over_the_past_3_year__c</fullName>
    <description>Has volume declined over the past 3 years?</description>
    <inlineHelpText>(Yes = -2 points, No = +2 points)</inlineHelpText>
    <label>Has volume declined over the past 3 year</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>