knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/If_competing_hospital_to_client_hospital__c.field-meta.xml
<CustomField>
    <fullName>If_competing_hospital_to_client_hospital__c</fullName>
    <description>If competing hospital to client hospital</description>
    <inlineHelpText>- 2 points</inlineHelpText>
    <label>If competing hospital to client hospital</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>