knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Innercity_indian_reserve_military_base__c.field-meta.xml
<CustomField>
    <fullName>Innercity_indian_reserve_military_base__c</fullName>
    <description>Inner-city, indian reservation or military base hospital</description>
    <inlineHelpText>- 2 points</inlineHelpText>
    <label>Innercity, indian reserve, military base</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>