knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Is_facility_of_strategic_value__c.field-meta.xml
<CustomField>
    <fullName>Is_facility_of_strategic_value__c</fullName>
    <description>Is facility of strategic value? (Relationship, System, Service Line, Additional Facility)</description>
    <inlineHelpText>+ 5 points</inlineHelpText>
    <label>Is facility of strategic value?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>