knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Is_hospital_financially_stable__c.field-meta.xml
<CustomField>
    <fullName>Is_hospital_financially_stable__c</fullName>
    <description>Is hospital financially stable? (Yes = +1 point, No = -1 point)</description>
    <inlineHelpText>(Yes = +1 point, No = -1 point)</inlineHelpText>
    <label>Is hospital financially stable?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>