knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/New_State_or_Geography__c.field-meta.xml
<CustomField>
    <fullName>New_State_or_Geography__c</fullName>
    <description>New State or Geography</description>
    <inlineHelpText>- 2 points</inlineHelpText>
    <label>New State or Geography</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>