knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Overall_Average_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Average_Score__c</fullName>
    <description>Overall Average Score</description>
    <label>Overall Average Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>