knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Partnership_Alignment_Weighted_Factors__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Alignment_Weighted_Factors__c</fullName>
    <description>Partnership/Alignment Weighted Factors</description>
    <label>Partnership/Alignment Weighted Factors</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>