knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Positive_Negative_history_with_facilty__c.field-meta.xml
<CustomField>
    <fullName>Positive_Negative_history_with_facilty__c</fullName>
    <description>Positive or Negative history with facilty</description>
    <inlineHelpText>+ 1 or - 1 point</inlineHelpText>
    <label>Positive/Negative history with facilty?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>