knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Positive_or_Negative_Malpractice__c.field-meta.xml
<CustomField>
    <fullName>Positive_or_Negative_Malpractice__c</fullName>
    <description>Positive or Negative Malpractice Environment</description>
    <inlineHelpText>+ 1 or - 1 point</inlineHelpText>
    <label>Positive or Negative Malpractice</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>