knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Profitability_Weighted_Factors__c.field-meta.xml
<CustomField>
    <fullName>Profitability_Weighted_Factors__c</fullName>
    <description>Profitability Weighted Factors</description>
    <label>Profitability Weighted Factors</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>