knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Recruitability_Weighted_Factors__c.field-meta.xml
<CustomField>
    <fullName>Recruitability_Weighted_Factors__c</fullName>
    <description>Recruitability Weighted Factors</description>
    <label>Recruitability Weighted Factors</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>