knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/Supplemental_Information__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Information__c</fullName>
    <description>Supplemental Information</description>
    <label>Supplemental Information</label>
    <type>TextArea</type>
</CustomField>