knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Qualifying_Scorecard__c/fields/System_relationship_multiple_facilities__c.field-meta.xml
<CustomField>
    <fullName>System_relationship_multiple_facilities__c</fullName>
    <description>System Relationship (multiple facilities)</description>
    <inlineHelpText>+ 2 points</inlineHelpText>
    <label>System relationship(multiple facilities)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>